--- a/admin/index.html
+++ b/admin/index.html
@@ -3,29 +3,39 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ממשק ניהול N-HAREDI</title>
+  <title>N-HAREDI Admin | ניהול בסגנון JDN</title>
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
   <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+
   <script>
-    // יצירת תצוגה מקדימה שנראית בדיוק כמו האתר
+    // יצירת תצוגה מקדימה שנראית בדיוק כמו הכתבה הראשית ב-JDN
     var PostPreview = createClass({
       render: function() {
         var entry = this.props.entry;
+        var title = entry.getIn(['data', 'title']);
         var image = entry.getIn(['data', 'image']);
+        var pos = entry.getIn(['data', 'layout_position']);
         var bg = image ? this.props.getAsset(image) : '';
 
-        return h('div', {style: {fontFamily: 'Assistant, sans-serif', padding: '20px', direction: 'rtl'}},
-          h('div', {style: {borderBottom: '3px solid #000', paddingBottom: '10px', marginBottom: '20px'}},
-            h('h1', {style: {fontSize: '42px', fontWeight: '800'}}, 'N-HAREDI')
+        // עיצוב JDN בתוך הממשק
+        return h('div', {style: {fontFamily: 'Assistant, sans-serif', direction: 'rtl', padding: '20px', background: '#f0f0f0'}},
+          // לוגו JDN למעלה
+          h('div', {style: {background: 'linear-gradient(180deg, #2847f3 0%, #17298d 100%)', padding: '15px', textAlign: 'center', marginBottom: '20px'}},
+            h('h1', {style: {color: 'white', margin: 0, fontSize: '30px'}}, 'N-HAREDI')
           ),
-          h('div', {style: {maxWidth: '800px', margin: '0 auto'}},
-            h('h2', {style: {fontSize: '48px', lineHeight: '1.1', fontWeight: '800', marginBottom: '15px'}}, 
-              entry.getIn(['data', 'title'])
+          // תצוגת המיקום הנבחר
+          h('div', {style: {marginBottom: '10px', color: '#cc0000', fontWeight: 'bold'}}, 'תצוגה מקדימה: ' + (pos === 'top' ? 'כתבה ראשית' : pos === 'ticker' ? 'מבזק' : 'כתבה רגילה')),
+          
+          // הכתבה עצמה
+          h('div', {style: {background: 'white', borderRadius: '4px', overflow: 'hidden', boxShadow: '0 2px 5px rgba(0,0,0,0.1)'}},
+            image ? h('img', {src: bg.toString(), style: {width: '100%', height: '300px', object-fit: 'cover'}}) : null,
+            h('div', {style: {padding: '20px', borderBottom: '6px solid #17298d'}},
+              h('h2', {style: {fontSize: '28px', margin: 0, color: (pos === 'top' ? '#000' : '#17298d')}}, title)
             ),
-            image ? h('img', {src: bg.toString(), style: {width: '100%', borderRadius: '2px'}}) : null,
-            h('div', {style: {fontSize: '19px', marginTop: '20px', lineHeight: '1.6'}}, 
+            h('div', {style: {padding: '20px', fontSize: '18px', lineHeight: '1.6'}}, 
               this.props.widgetFor('body')
             )
           )
@@ -33,9 +43,10 @@
       }
     });
 
-    // רישום התצוגה המקדימה למערכת
+    // רישום התבנית למערכת
     CMS.registerPreviewTemplate("blog", PostPreview);
-    // הזרקת הפונט של האתר לתוך הממשק
+    
+    // הזרקת הסטייל של JDN כדי שיעבוד בתוך ה-Editor
     CMS.registerPreviewStyle("https://fonts.googleapis.com/css2?family=Assistant:wght@400;700;800&display=swap");
   </script>
 </body>
