--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JDN - חדשות הציבור החרדי</title>
+    <title>JDN - אתר החדשות המוביל למגזר החרדי</title>
     <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;600;700;800&display=swap" rel="stylesheet">
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <style>
         :root {
             --jdn-blue: #17298d;
-            --jdn-light-blue: #2847f3;
+            --jdn-gradient: linear-gradient(180deg, #2847f3 0%, #17298d 65%);
             --jdn-red: #cc0000;
         }
 
@@ -17,99 +17,150 @@
             font-family: 'Assistant', sans-serif;
             background-color: #f6f6f6;
             margin: 0; padding: 0;
+            color: #333;
         }
 
-        /* עיצוב ה-Header המעוגל של JDN */
+        /* ה-Header המעוגל המדויק של JDN */
         .site-header {
-            background: linear-gradient(180deg, var(--jdn-light-blue) 0%, var(--jdn-blue) 65%);
-            padding: 20px 0;
+            background: var(--jdn-gradient);
+            padding: 30px 0 50px 0;
             text-align: center;
-            border-bottom-left-radius: 50% 20px;
-            border-bottom-right-radius: 50% 20px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+            border-bottom-left-radius: 50% 30px;
+            border-bottom-right-radius: 50% 30px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.15);
+            position: relative;
+            z-index: 10;
         }
 
         .site-header h1 {
             color: white;
-            font-size: 50px;
+            font-size: 65px;
             font-weight: 800;
             margin: 0;
-            letter-spacing: -1px;
+            letter-spacing: -2px;
+            text-shadow: 0 2px 4px rgba(0,0,0,0.2);
         }
 
-        /* סרגל מבזקים */
-        .ticker-bar {
-            background: var(--jdn-red);
+        /* פס המבזקים שמתחבר ל-Header */
+        .ticker-container {
+            background-color: var(--jdn-red);
             color: white;
-            padding: 8px 0;
-            font-weight: bold;
+            padding: 10px 0;
+            margin-top: -25px;
+            position: relative;
+            z-index: 5;
+            font-weight: 700;
             text-align: center;
-            margin-top: -10px;
-            z-index: -1;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
 
-        .container {
+        /* תפריט ניווט */
+        nav {
+            background: #fff;
+            border-bottom: 1px solid #e0e0e0;
+            padding: 12px 0;
+            text-align: center;
+        }
+        nav a {
+            text-decoration: none;
+            color: var(--jdn-blue);
+            font-weight: 700;
+            margin: 0 15px;
+            font-size: 17px;
+        }
+
+        .main-wrapper {
             max-width: 1200px;
             margin: 20px auto;
             padding: 0 15px;
             display: grid;
             grid-template-columns: 2fr 1fr;
-            gap: 20px;
+            gap: 25px;
         }
 
-        /* כתבה ראשית - בדיוק כמו ב-JDN */
-        .main-post {
+        /* הכתבה הראשית בסגנון JDN */
+        .main-article {
             position: relative;
-            background: #000;
-            height: 450px;
-            border-radius: 5px;
+            background-color: #000;
+            height: 480px;
+            border-radius: 6px;
             overflow: hidden;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+            cursor: pointer;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.1);
         }
 
-        .main-post img {
+        .main-article img {
             width: 100%; height: 100%; object-fit: cover; opacity: 0.8;
+            transition: transform 0.3s ease;
         }
 
-        .main-post-title {
+        .main-article:hover img { transform: scale(1.02); }
+
+        .main-article-content {
             position: absolute;
             bottom: 0; right: 0; left: 0;
-            padding: 30px;
-            background: linear-gradient(transparent, rgba(0,0,0,0.9));
+            padding: 40px 30px;
+            background: linear-gradient(transparent, rgba(0,0,0,0.95));
             color: white;
-            border-bottom: 6px solid var(--jdn-blue);
+            border-bottom: 10px solid var(--jdn-blue);
         }
 
-        .main-post-title h2 {
-            font-size: 38px;
+        .main-article-content h2 {
+            font-size: 42px;
             margin: 0;
             font-weight: 800;
-            line-height: 1.2;
+            line-height: 1.1;
         }
 
-        /* כתבות משניות בגריד */
-        .news-grid {
+        /* גריד הכתבות המשניות */
+        .secondary-grid {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 15px;
-            margin-top: 20px;
+            gap: 20px;
+            margin-top: 25px;
         }
 
-        .card {
+        .jdn-card {
             background: white;
             border-radius: 4px;
             overflow: hidden;
-            border-bottom: 3px solid var(--jdn-blue);
+            box-shadow: 0 2px 8px rgba(0,0,0,0.06);
+            border-bottom: 4px solid var(--jdn-blue);
+            transition: all 0.2s;
         }
 
-        .card img { width: 100%; height: 180px; object-fit: cover; }
-        .card-body { padding: 12px; }
-        .card-body h3 { font-size: 18px; color: var(--jdn-blue); margin: 0; font-weight: 700; }
+        .jdn-card:hover { transform: translateY(-3px); }
+        .jdn-card img { width: 100%; height: 200px; object-fit: cover; }
+        .jdn-card-body { padding: 15px; }
+        .jdn-card-body h3 {
+            font-size: 20px;
+            color: var(--jdn-blue);
+            margin: 0;
+            font-weight: 700;
+            line-height: 1.3;
+        }
+
+        /* טור צדדי */
+        .sidebar-box {
+            background: white;
+            border-top: 5px solid var(--jdn-blue);
+            padding: 20px;
+            border-radius: 4px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.06);
+        }
+
+        .sidebar-box h4 {
+            margin: 0 0 15px 0;
+            font-size: 22px;
+            border-bottom: 1px solid #eee;
+            padding-bottom: 10px;
+        }
 
         @media (max-width: 768px) {
-            .container { grid-template-columns: 1fr; }
-            .main-post { height: 300px; }
-            .news-grid { grid-template-columns: 1fr; }
+            .main-wrapper { grid-template-columns: 1fr; }
+            .secondary-grid { grid-template-columns: 1fr; }
+            .site-header h1 { font-size: 45px; }
+            .main-article { height: 350px; }
         }
     </style>
 </head>
@@ -119,57 +170,77 @@
     <h1>N-HAREDI</h1>
 </header>
 
-<div class="ticker-bar" id="ticker">מבזק: טוען עדכונים...</div>
+<div class="ticker-container" id="ticker-text">
+    טוען מבזקים...
+</div>
 
-<div class="container">
-    <div id="news-feed">
-        <div id="featured-article"></div>
-        <div class="news-grid" id="grid-articles"></div>
-    </div>
-    <div class="sidebar">
-        <div style="background:white; padding:15px; border-top:4px solid var(--jdn-blue);">
-            <h4 style="margin:0; color:var(--jdn-blue);">הכי נקראים</h4>
+<nav>
+    <a href="/">ראשי</a>
+    <a href="#">חדשות</a>
+    <a href="#">פוליטיקה</a>
+    <a href="#">חצרות קודש</a>
+    <a href="/admin">ניהול המערכת</a>
+</nav>
+
+<div class="main-wrapper">
+    <section>
+        <div id="featured-article-root"></div>
+        <div class="secondary-grid" id="grid-root"></div>
+    </section>
+
+    <aside>
+        <div class="sidebar-box">
+            <h4>הכי נקראים</h4>
+            <div id="sidebar-root">טוען...</div>
         </div>
-    </div>
+    </aside>
 </div>
 
 <script>
-    async function loadContent() {
-        const featured = document.getElementById('featured-article');
-        const grid = document.getElementById('grid-articles');
-        const ticker = document.getElementById('ticker');
+    async function fetchJdnData() {
+        const featuredRoot = document.getElementById('featured-article-root');
+        const gridRoot = document.getElementById('grid-root');
+        const ticker = document.getElementById('ticker-text');
 
         try {
-            const res = await fetch('https://api.github.com/repos/yy0534105830-source/news/contents/content/blog');
-            const files = await res.json();
+            const response = await fetch('https://api.github.com/repos/yy0534105830-source/news/contents/content/blog');
+            const files = await response.json();
             files.reverse();
 
             for (let file of files) {
-                const raw = await fetch(file.download_url);
-                const text = await raw.text();
-                const title = text.split('title:')[1]?.split('\n')[0].replace(/"/g, '').trim();
-                const img = text.split('image:')[1]?.split('\n')[0].trim() || "";
-                const pos = text.split('layout_position:')[1]?.split('\n')[0].trim() || "side";
+                if (file.name.endsWith('.md')) {
+                    const raw = await fetch(file.download_url);
+                    const text = await raw.text();
+                    
+                    const title = text.split('title:')[1]?.split('\n')[0].replace(/"/g, '').trim();
+                    const img = text.split('image:')[1]?.split('\n')[0].trim() || "";
+                    const pos = text.split('layout_position:')[1]?.split('\n')[0].trim() || "side";
 
-                if (pos === "top") {
-                    featured.innerHTML = `
-                        <div class="main-post">
-                            ${img ? `<img src="${img}">` : ''}
-                            <div class="main-post-title"><h2>${title}</h2></div>
-                        </div>`;
-                } else if (pos === "ticker") {
-                    ticker.innerHTML = `מבזק: ${title}`;
-                } else {
-                    grid.innerHTML += `
-                        <div class="card">
-                            ${img ? `<img src="${img}">` : ''}
-                            <div class="card-body"><h3>${title}</h3></div>
-                        </div>`;
+                    if (pos === "top") {
+                        featuredRoot.innerHTML = `
+                            <div class="main-article">
+                                ${img ? `<img src="${img}">` : ''}
+                                <div class="main-article-content">
+                                    <h2>${title}</h2>
+                                </div>
+                            </div>`;
+                    } else if (pos === "ticker") {
+                        ticker.innerHTML = `<span>מבזק: ${title}</span>`;
+                    } else {
+                        gridRoot.innerHTML += `
+                            <div class="jdn-card">
+                                ${img ? `<img src="${img}">` : ''}
+                                <div class="jdn-card-body">
+                                    <h3>${title}</h3>
+                                </div>
+                            </div>`;
+                    }
                 }
             }
-        } catch (e) { console.error("טוען..."); }
+        } catch (e) { console.error("טעינה נכשלה"); }
     }
-    loadContent();
+    fetchJdnData();
 </script>
+
 </body>
 </html>
