--- a/admin/index.html
+++ b/admin/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="he">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ניהול תוכן - JDN</title>
-  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <title>JDN - ניהול תוכן</title>
+  <link rel="sveltia-cms-config" type="text/yaml" href="config.yml" />
+  <script src="https://unpkg.com/@sveltia/cms/dist/sveltia-cms.js" type="module"></script>
 </head>
-<body>
-  <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
-</body>
+<body></body>
 </html>
