--- a/admin/index.html
+++ b/admin/index.html
@@ -1,35 +1,33 @@
 <!doctype html>
-<html lang="he" dir="rtl">
+<html>
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>מערכת ניהול תוכן - JDN News</title>
-  <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+  <title>JDN Admin - ניהול תוכן</title>
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
+  <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+  
   <script>
     CMS.init({
       config: {
-        // הגדרת המאגר שלך ב-GitHub
         backend: {
           name: 'github',
-          repo: 'yy0534105830-source/news', // וודא שזה השם המדויק
+          repo: 'yy0534105830-source/news',
           branch: 'main',
         },
-        // הגדרת מקום שמירת התמונות
         media_folder: 'images',
         public_folder: '/images',
-        
-        // הגדרת התוכן
         collections: [
           {
             name: 'blog',
-            label: 'כתבות וחדשות',
-            folder: 'content/blog', // כאן הכתבות יישמרו
+            label: 'כתבות חדשות',
+            folder: 'content/blog',
             create: true,
             slug: '{{year}}-{{month}}-{{day}}-{{slug}}',
             fields: [
-              { label: 'כותרת הכתבה', name: 'title', widget: 'string' },
+              { label: 'כותרת', name: 'title', widget: 'string' },
               { 
                 label: 'מיקום באתר', 
                 name: 'layout_position', 
@@ -41,13 +39,13 @@
                 ],
                 default: 'side'
               },
-              { label: 'תאריך ושעה', name: 'date', widget: 'datetime', format: 'YYYY-MM-DD HH:mm' },
-              { label: 'תמונה ראשית (קישור)', name: 'image', widget: 'string', hint: 'עדיף להשתמש בקישור ישיר מתמונה ב-JDN כדי שנטפרי יפתח' },
-              { label: 'גוף הכתבה', name: 'body', widget: 'markdown' },
-            ],
-          },
-        ],
-      },
+              { label: 'תאריך', name: 'date', widget: 'datetime' },
+              { label: 'קישור לתמונה', name: 'image', widget: 'string' },
+              { label: 'תוכן הכתבה', name: 'body', widget: 'markdown' }
+            ]
+          }
+        ]
+      }
     });
   </script>
 </body>
