--- a/admin/index.html
+++ b/admin/index.html
@@ -2,37 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Content Manager</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google" content="notranslate" />
+  <title>ניהול תוכן JDN</title>
 </head>
 <body>
   <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
-  <script>
-    CMS.init({
-      config: {
-        backend: {
-          name: 'github',
-          repo: 'yy0534105830-source/news',
-          branch: 'main',
-          // כאן מכניסים את ה-Token במידה וההתחברות הרגילה נכשלת
-          auth_type: 'token' 
-        },
-        load_config_file: false,
-        media_folder: 'images',
-        collections: [
-          {
-            name: 'blog',
-            label: 'כתבות',
-            folder: 'content/blog',
-            create: true,
-            fields: [
-              { label: 'כותרת', name: 'title', widget: 'string' },
-              { label: 'תמונה', name: 'image', widget: 'string' },
-              { label: 'תוכן', name: 'body', widget: 'markdown' }
-            ]
-          }
-        ]
-      }
-    });
-  </script>
 </body>
 </html>
