--- a/admin/index.html
+++ b/admin/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="he">
+<html lang="he" class="notranslate" translate="no">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,20 +7,21 @@
   <title>ניהול חדשות JDN</title>
 </head>
 <body>
-  <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+  <script src="https://unpkg.com/netlify-cms@^2.10.192/dist/netlify-cms.js"></script>
   
   <script>
+    window.CMS_MANUAL_INIT = true; // פקודה קריטית למניעת טעינה כפולה
+    
     CMS.init({
       config: {
         backend: {
           name: 'github',
           repo: 'yy0534105830-source/news',
           branch: 'main',
-          // כאן הכנסתי את המזהה החדש שלך
           app_id: 'Ov23liyj2fBKFhjXJGvj',
           base_url: 'https://yy0534105830-source.github.io'
         },
-        display_url: 'https://yy0534105830-source.github.io/news/',
+        load_config_file: false,
         media_folder: 'images',
         public_folder: '/images',
         collections: [
